[package]
name = "minus-i"
version = "0.1.0"
authors = ["Dimitri Polonski <d.polonski@wmt.team>"]
edition = "2018"

[dependencies]
minus-i-derive = { path = "minus-i-derive" , default-features = false}
core-error = "0.0.1-rc4"
auto_impl = "0.4.1"
inventory = { version = "0.1.9", optional = true }
lazy_static = { version = "1", optional = true }

[features]
default = ["std", "inventory", "lazy_static"]
std = ["core-error/std", "minus-i-derive/std"]

[[example]]
name = "minimal"
path = "examples/minimal.rs"

[[example]]
name = "autocomplete"
path = "examples/autocomplete.rs"

[[example]]
name = "no_std"
path = "examples/no_std.rs"

[dev_dependencies]
rustyline = "6"
rustyline-derive = "0.3"
arrayvec = "0.5"
