[package]
name = "rusteval"
description = "Make your application's structs and functions interactive"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/dimpolo/rusteval/"
license = "MIT OR Apache-2.0"
categories = [
    "command-line-interface",
    "development-tools::debugging",
    "hardware-support",
    "no-std",
    "parser-implementations"
]
keywords = [
    "repl",
    "eval",
    "interactive"
]

[dependencies]
rusteval-derive = { path="rusteval-derive", version = "0.1", default-features = false}
inventory = { version = "0.3.2", optional = true }
lazy_static = { version = "1.4.0", optional = true }

[features]
default = ["std", "inventory", "lazy_static"]
std = ["rusteval-derive/std"]

[[example]]
name = "minimal"
path = "examples/minimal.rs"

[[example]]
name = "autocomplete"
path = "examples/autocomplete.rs"

[[example]]
name = "no_std"
path = "examples/no_std.rs"

[dev_dependencies]
rustyline = "6"
rustyline-derive = "0.3"
arrayvec = "0.5"
