[package]
name = "rusteval-derive"
description = "macros for rusteval"
version = "0.1.1"
authors = ["Dimitri Polonski"]
edition = "2018"
repository = "https://github.com/dimpolo/rusteval/"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1", features = ["extra-traits", "full"] }
quote = "1"
proc-macro2 = "1"

[features]
default = ["std"]
std = []
