[package]
name = "rusteval-derive"
description = "macros for rusteval"
version = "0.2.0"
edition = "2021"
repository = "https://github.com/dimpolo/rusteval/"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
# proc macro deps
syn = { version = "1.0.104", features = ["full"] }
quote = "1.0.21"
proc-macro2 = "1.0.47"
# introspection deps
rustdoc-json = "0.7.2"
rustdoc-types = "0.19.0"
serde_json = "1.0.89"
once_cell = "1.16.0"

[features]
default = ["std"]
std = []
